# rusty

./: .gitignore  AGENTS.md  Cargo.toml  Part_10_SmartPointers.rs  Part_6_Collections.rs  Part_7_ErrorHandling.rs  Part_8_TraitsAndGenerics.rs  Part_9_Lifetimes.rs  README.md  bandwidth.csv  bench_results_latency_vs_dim.csv  commit_all.sh  finish.sh  finish_all.py  kernel.py  overload.csv  plan_step_complete.py  plot.py  pre_commit.sh  research_summary.md  rust.py  throughput.csv  zk_benchmark.csv
drpp-research/crates/experiments/: Cargo.toml
drpp-research/crates/experiments/src/: config.rs  exp_a.rs  exp_b.rs  exp_c.rs  exp_d.rs  exp_e.rs  exp_f.rs  exp_g.rs  exp_h.rs  exp_i.rs  figures.rs  lib.rs  main.rs  report.rs  tables.rs
hlcs-hft/: .gitignore  Cargo.toml  RESULTS.md  dhat-heap.json  generate_results.py  plot.py
hlcs-hft/bench_results/: bandwidth.csv  base_sweep.csv  exp_a_latency.csv  exp_b_params.csv  exp_c_stats.csv  exp_d_hardware.csv  exp_e_messages.csv  exp_f_overload.csv  exp_g_zk.csv  exp_h_memory.csv  exp_i_correctness.csv  hardware_ablation.csv  latency_throughput.csv  latency_vs_dim.csv  overload.csv  overload_grid.csv  overload_p99.csv  p99_jitter.csv  param_sensitivity.csv  security.csv  throughput.csv  workload_variation.csv  zk_proof.csv  zk_sweep.csv
hlcs-hft/src/: lib.rs  main.rs  zk.rs
hlcs-hft/tests/: correctness.rs
hlcs-research/crates/experiments/: Cargo.toml
hlcs-research/crates/experiments/src/: exp_a.rs  exp_b.rs  exp_c.rs  exp_d.rs  exp_e.rs  exp_f.rs  exp_g.rs  exp_h.rs  exp_i.rs  exp_j.rs  exp_k.rs  figures.rs  main.rs  report.rs  tables.rs
hlcs-research/crates/hlcs_core/: Cargo.toml
hlcs-research/crates/hlcs_core/outputs/tables/: T01_commitment_latency_comparison.csv  T01_commitment_latency_comparison.md  T01_commitment_latency_comparison.tex  T02_throughput_comparison.csv  T02_throughput_comparison.md  T02_throughput_comparison.tex  T03_communication_overhead.csv  T03_communication_overhead.md  T03_communication_overhead.tex  T04_latency_vs_dimension_load.csv  T04_latency_vs_dimension_load.md  T04_latency_vs_dimension_load.tex  T05_forex_workload_summary.csv  T05_forex_workload_summary.md  (+34 more)
hlcs-research/crates/hlcs_core/src/: hash_commit.rs  hybrid_commit.rs  lattice_commit.rs  lib.rs  lwe.rs  security.rs  stats.rs  zk.rs
src/: lib.rs
(+75 files in other folders)
