[package]
name = "hlcs-hft"
version = "0.2.0"
edition = "2021"

[dependencies]
sha3 = "0.10"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
digest = "0.10"
rayon = "1.8"
plotters = "0.3"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "plot"
path = "src/bin/plot.rs"

[[bin]]
name = "zk_benchmark"
path = "src/bin/zk_benchmark.rs"
