[package]
name = "experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
drpp_core = { path = "../drpp_core" }
modalities = { path = "../modalities" }
rand = { version = "0.8", features = ["std_rng"] }
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
toml = "0.8"
plotters = { version = "0.3", features = ["bitmap_backend", "full_palette"] }
plotters-bitmap = "0.3"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
statrs = "0.16"
