[package]
name = "experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
hlcs_core = { path = "../hlcs_core" }
forex_sim = { path = "../forex_sim" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
toml = "0.8"
plotters = { version = "0.3", features = ["bitmap_backend", "full_palette"] }
rayon = "1.10"
anyhow = "1"
thiserror = "1"
statrs = "0.16"
rand = { version = "0.8", features = ["std_rng"] }
