[package]
name = "hlcs_core"
version = "0.1.0"
edition = "2021"

[dependencies]
sha3 = "0.10"
hex = "0.4"
rand = { version = "0.8", features = ["std_rng"] }
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
statrs = "0.16"

[dev-dependencies]
